remove prometheus, limit java memory, add command to docker-compose instead of build, run docker inside start_application.sh